# RustRayTracer

./: .gitignore  Cargo.toml  README.md  image_test.ppm  scene_data.json
.github/workflows/: rust.yml
lib/: Cargo.toml
lib/src/utilities/: camera.rs  color.rs  geometry.rs  hit_record.rs  interval.rs  material.rs  mod.rs  point.rs  ray.rs  scenes.rs  sphere.rs  vector3.rs
project_bin/: Cargo.toml
project_bin/src/: main.rs
src/: Cargo.toml  main.rs
tests/: color_tests.rs  common_config.rs  vector3_tests.rs
