[package]
name = "ray_tracer"
version = "0.1.0"
edition = "2021"
license = "GNU GENERAL PUBLIC LICENSE"
authors = ["Sen"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
lib ={ path = "lib"}    # needed for the tests to work

[[bin]]
name = "project_bin"
path = "src/main.rs"

# Check https://rust-classes.com/chapter_4_3
[workspace]
members = [
    "lib",
    "project_bin",
]
resolver = "2"

[profile.release]
opt-level = 3