[package]
name = "ray_tracer"
version = "0.1.0"
edition = "2021"
license = "GNU GENERAL PUBLIC LICENSE"
authors = ["Sen"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
# Your dependencies here
lib ={ path = "lib"}    # needed for the tests to work

[dev-dependencies]
# Dependencies needed only for testing
# mockall = "0.13.0"

[[bin]]
name = "bin"
path = "src/main.rs"

[[test]]
name = "test"
path = "tests/common_config.rs"

# Check https://rust-classes.com/chapter_4_3
[workspace]
members = [
    "lib"   # DONOT include the tests directory here and DONOT create a Cargo.toml file in the tests directory
]
resolver = "2"

[profile.release]
opt-level = 3